--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-#header-navbar {
+.header {
   background-color: transparent;
   border: none;
   height: 100px;  
 }
 
-.fix-header {
+.header.active {
   background-color: rgba(0, 0, 0, 0.5);  
-  
 }
 
 .container {
@@ -20,18 +19,28 @@ main section {
   overflow: hidden;
 }
 
-
 .text-nav-color {
-  color: #fff!important;
+  color: #fff !important;
+  background: none !important;
   font-size: 16px;
   font-weight: bold;
   font-family: 'Circular', sans-serif;
-  padding-top: 40px!important;
+  /* padding-top: 40px!important; */
 }
+
+a.text-nav-color {
+  padding-top: 40px !important;
+}
+
+a.text-nav-color:hover {  
+  color: #1ed760 !important;
+}
+
 
 .header-logo {
   display: inline-block;
-  margin-top: -10px;
+  padding-top: 20px;
+  /* margin-top: -10px; */
 }
 .navbar-logo {
   font-size: 25px;
@@ -40,13 +49,21 @@ main section {
   /* margin-top: -100px;  */ 
 }
 
+/*MAIN */
 #section-1 {
   border: none;
   width: 100%;
   height: 641px;
-  background-image: url(./image/spo.jpg)
+  background-image: url(./image/duotone-photoshop-actions.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: right;
+  position: relative; /*to set .terms to absolute*/
 }
 
+/* .btn-lg:visited {
+    color: #fff;
+} */
 .big-text {
   /* height: 641px; */
   width: 100%;
@@ -88,13 +105,11 @@ main section {
   color: #fff;
 }
 
-.terms p {
+.terms {
   color: #fff;
   display: block;
-  -webkit-margin-before: 1em;
-  -webkit-margin-after: 1em;
-  -webkit-margin-start: 0px;
-  -webkit-margin-end: 0px;
+  position: absolute !important;
+  bottom: 0;
 }
 .terms-link {
   color: #fff;
@@ -115,15 +130,35 @@ footer {
 #footer-1 {
   display: -webkit-flex;
   display: flex;
+  flex-flow: row wrap;
   padding-top: 100px;  
   padding-bottom: 50px;
   
 }
 
-#footer-1 div {
+/* #footer-1 div {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+} */
+
+.col-logo {
+  flex-grow: 3;
+}
+.col-company {
+  flex-grow: 1;
+}
+.col-communities {
+  flex-grow: 1;
+}
+.col-useful-link {
+  flex-grow: 1;
+}
+.a {
+  flex-grow: 4;
+}
+.col-social-icons {
+  flex-grow: 1;
 }
 
 .title {
@@ -157,6 +192,7 @@ footer {
   font-size: 3em;
   background-color: #232326;
   color: #fff;
+  float: right;
 }
 
 .circle:hover {
@@ -173,3 +209,24 @@ footer {
 .fa-facebook {
   padding: 0.5em 0.7em;
 }
+
+#footer-2 {
+  display: flex;
+  display: -webkit-flex;
+
+}
+
+.right-part {
+  color:#fff;
+  text-align: right;
+}
+.left-part {
+  color:#fff;
+  text-align: left;
+}
+
+#footer-2 div {
+  flex: 1;
+  
+}
+
